...
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="16dp"
                    android:text="@={viewmodel.password}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:onClick="@{() -> viewmodel.loginUser()}"
                    android:text="@string/login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register_here"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:onClick="@{() -> viewmodel.registerUser()}"
...
